<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/tvcampreciew"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    </LinearLayout>

    <ScrollView
        android:id="@+id/tvcamgallery_images"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.47" >

        <LinearLayout
            android:id="@+id/tvcamlinearlayout_images"
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp" >
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true" >

        <Button
            android:id="@+id/tvcamok"
            android:layout_width="50dip"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_line_white"
            android:padding="@dimen/margin_padding10"
            android:text="@string/tvcamok" />

        <Button
            android:id="@+id/tvcamtakepic"
            android:layout_width="50dip"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvcamok"
            android:background="@drawable/btn_bg_camera"
            android:text="@string/tvcamtack"
            android:textColor="@drawable/textcolor_selector" />

        <Button
            android:id="@+id/tvcamexit"
            android:layout_width="50dip"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvcamtakepic"
            android:background="@drawable/bg_line_white"
            android:padding="@dimen/margin_padding10"
            android:text="@string/tvcamexit"
            android:textColor="@drawable/textcolor_selector" />
    </RelativeLayout>

</RelativeLayout>